# massbailfund-mapping

./: .gitignore  CLAUDE.md  README.md
backend-server/: .dockerignore  .gitignore  Makefile  README.md  manage.py  pyproject.toml  pytest.ini  run  uwsgi.ini
backend-server/accounts/: admin.py
backend-server/accounts/api/: auth.py
backend-server/accounts/migrations/: 0001_initial.py  0002_remove_uid_field.py
backend-server/accounts/models/: users.py
backend-server/core/: admin.py  cache.py  signals.py  urls.py
backend-server/core/api/: __init__.py  views.py
backend-server/core/migrations/: 0001_initial.py  0002_alter_entity_options_and_more.py  0003_add_resource_model.py  0004_resource_url_max_length.py  0005_resource_image_field.py  0006_glossary_and_nullable_resource_entity.py  0007_remove_choices_widen_charfields.py  0008_add_new_models_and_transitional_fks.py  0009_backfill_new_models.py  0010_remove_old_models_and_finalize.py  0011_add_quote_and_timeline_models.py  0012_add_key_points_field.py  0013_migrate_key_facts_to_key_points.py  0014_remove_key_facts_field.py  0015_alter_resource_key_points.py  0016_create_cache_table.py
backend-server/core/models/: __init__.py  entities.py
backend-server/core/serializers/: __init__.py  entities.py
backend-server/core/tests/: conftest.py  test_auth.py  test_cache.py  test_models.py  test_views.py
backend-server/docker/: Dockerfile-Deploy  Dockerfile-Environment  compose-local.yml
backend-server/massbailfund/: urls.py  wsgi.py
backend-server/massbailfund/common/: mixins.py  permissions.py
(+110 files in other folders)
